working on porintable media

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <title>CV Julien Tayon (impress.jsà</title>
+    <title>CV Julien Tayon (impress.js)</title>
     
     <meta name="description" content="mon Curriculum Vitae en format impress3D" />
     <meta name="author" content="Julien Tayon"/>
@@ -355,11 +355,12 @@
 
 version  interactive
 </span></center><br/>
-<p>Julien Tayon<br/>
+<a class="hidden" href="https://github.com/jul/cv"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<div class=decal >Julien Tayon<br/>
 <a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a href=http://github.com/jul >github.com/jul</a><br/>
 Tel: 514 999 7453
-</p>
+</div>
 
 </div>
 
