one step closer

--- a/index.html
+++ b/index.html
@@ -352,9 +352,9 @@
 
 </div>
 <div id=printable >
-<center><span class=button >
+<center><a href=#init class=button >
 version  interactive
-</span></center><br/>
+</a></center><br/>
 <div class=decal2 >Julien Tayon<br/>
 <a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a href=http://github.com/jul >github.com/jul</a><br/>
@@ -419,46 +419,43 @@ if ("ontouchstart" in document.documentElement) {
 <script>
 
 $(document).ready(function() { 
+var class_saver=[];
 //$('.button').button();
 cv=$('#printable').html();
 $(".content").each(function(i,el) { cv+=$(el).html() });
 $('#printable').html(cv);
 $('#jcprt').click( function() { 
     window.location.hash = 'printable';
-  /*  
-    $("body").css("overflow","auto");
-    $("body").css("position","relative");
-    $('#printable').css("position","relative");
-    
-    $('#printable').css("height","100%");
-    */$("body").removeAttr("class");
+    class_saver=$("body").attr("class");
+    $("body").removeAttr("class");
     $("#impress").hide();
     $("#printable").fadeIn();
     $(".fallback-message").hide();
     $('#printable').zIndex=90000;
+    $('body').zIndex=0;
+    $("body").css("overflow", "auto");
 
 });
 
 $('.button').click(function() {
     window.location.hash = 'init';
-    $('#printable').hide();
-    /*$('#printable').css("position","absolute");*/
+    $('#printable').fadeOut({ 'speed' : "slow"});
 
-    $('#impress').show();
+
+    
+    $('#impress').fadeIn({ 'speed': "slow"});
+    $("body").attr("class",class_saver);
     impress().init();
     impress().goto("init");
+    $("body").css("overflow", "hidden");
 });
-console.log("here11");
 if (window.location.hash.indexOf("printable")!= -1 || ! window.location.hash ) { 
-console.log(window.location.hash );
     $('#jcprt').click();
-    console.log("ok");
 } else { 
-console.log("here112");
-console.log(window.location.hash );
     $('#printable').hide();
     impress().init();
     impress().goto(window.location.hash);
+    class_saver=$("body").attr("class");
 }
 });
 </script>
