at least I am not sea sick now

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </div>
 
 <div id="impress">
-    <div id="init" style="line-height:2" class="step" data-scale=3 data-x="-4000" data-y="-2500" >
+    <div id="init" style="line-height:2" class="step" data-scale=3 data-x="2500" data-y="-500" >
         Vous préférez :
         <ul>
             <li><a href="#portfolio">portfolio?</a></li>
@@ -37,17 +37,17 @@
     </div>
     
    <div id="CVinter" class="content step " 
-    data-scale=1 data-x="00" data-y="-5000"  >
+    data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
        J'apprécie de développer, et de livrer des architectures simples et saines. 
        Mon objectif de carrière et d'être intégré à une structure opérationnelle, 
        où la capacité de réalisation est appréciée. 
    </div>
-   <div class="content step " data-scale=10 data-x="0" data-y="0" >
+   <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
 
-       <div  class="content step" data-rotate=10  data-scale=.2 data-x="-3500" data-y="500" data-z=0 >
+       <div  class="content step"   data-scale=1 data-x="000" data-y="2000"  >
        <h1 class=intitule><b>2011</b> MassMotionMedia Publicité en ligne en format Riche</h1>
        <p>
        En tant que développeur senior, j'ai participé à l'élaboration de différents
@@ -93,7 +93,7 @@
            </tr>
        </table>
    </div>
-   <div  class="step  content " data-scale=.1 data-x="-3000" data-y="500" data-rotate=20 data-scale=.1 >
+   <div  class="step  content " data-scale=.9 data-x="1000" data-y="2000"   >
        <h1 class=intitule>2010 Cellfish Media</h1>
        <p>
        Lead Développeur sur la partie facturation du paiement mobile en ligne 
@@ -136,8 +136,8 @@
            </tr>
        </table>
    </div>
-   <div  class="step content" data-rotate=30 data-scale=.1 
-   data-x="-2500" data-y="500" >
+   <div  class="step content" data-scale=.8 
+   data-x="2000" data-y="2000" >
 
    <h1 class=intitule>2005 - 2010 Freelance</h1>
    <p>
@@ -184,8 +184,8 @@
        </tr>
    </table>
    </div>
-   <div  class="step content" data-rotate=40 data-scale=.1 
-   data-x="-2000"  data-y="500" >
+   <div  class="step content" data-scale=.6
+   data-x="3000"  data-y="2000" >
    <h1 class=intitule>2002 - 2005 Telco</h1>
    <p>
    Deux grandes expériences: LDCOM networks, et FTC/orange télévision.<br/>
@@ -223,8 +223,8 @@
        </tr>
    </table>
    </div>
-   <div  class="step content" data-rotate-z=50 data-scale=.1 
-   data-x="-1500" data-y="500" >
+   <div  class="step content"  data-scale=.5
+   data-x="3500" data-y="2000" >
    <h1 class=intitule>1999 - 2002 Société de Service en Logiciel Libre </h1>
    <p>
    Open care, Easter-eggs, Alcôve ont été mes 3 premières société pour lesquelles j'ai travaillé.<br/>
@@ -259,12 +259,12 @@
        </tr>
    </table>
    </div>
-   <div class="content step" data-scale=10 data-x="0" data-y="7000" 
-  data-rotate=90 >
+   <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
+  data-rotate=180 >
        <h1 class=big >Diplômes</h1>
     </div>
    <div class="content step" data-scale=1 
-   data-rotate=100 data-x="00" data-y="3500">
+   data-rotate=180 data-x="-2000" data-y="1500">
 
    <h1 class=intitule >
     1998 Maître es science mention assez bien
@@ -286,7 +286,7 @@
 
    </div>
    <div class="content step" data-scale=1 
-   data-rotate=110 data-x="00" data-y="6000">
+   data-rotate=180 data-x="-2000" data-y="1000">
 
    <h1 class=intitule >
     2002 Cycle B CNAM ingénieurie des organisation
@@ -307,12 +307,12 @@
 
 
    </div>
-   <div class="content step" data-scale=10 data-x="-10000" data-y="2000" 
-  data-rotate=180 >
+   <div class="content step" data-scale=10 data-x="-2000" data-y="000" 
+  data-rotate=-90 >
        <h1 class=big >Portfolio</h1>
     </div>
    <div class="content step" data-scale=2
-   data-rotate=180 data-x="-8000" data-y="2000">
+   data-rotate=-90 data-x="-2000" data-y="-2000">
 <ul><li>
     <a  href=http://github.com/jul>Github.com/jul</a> <br/>
     Contient les sources de mes projets en python et javascript
@@ -328,35 +328,35 @@
     </ul>
     </div>
     
-   <div id=portfolio class="step" data-scale=10 data-x="-15000" data-y="2000" 
-  data-rotate=-90 >
+   <div id=portfolio class="step" data-scale=10 data-x="1000" data-y="-2000" 
+  data-rotate=-45 >
        <h1 class=big >Projets fun</h1>
     </div>
-   <div class="step" data-scale=5 data-x="-16000" data-y="00" 
-  data-rotate=-90 >
+   <div class="step" data-scale=5 data-x="1000" data-y="-6000" 
+  data-rotate=-65 >
       Simulation multi agent avec matplotlib<br/>
       <a href=https://github.com/jul/KISSMyAgent/wiki >KissMyAgent</a><br/>
       <img src=img/kiss.jpg  />
     </div>
-   <div class="step" data-scale=5 data-x="-20000" data-y="2000" 
-  data-rotate=-90 >
+   <div class="step" data-scale=2 data-x="3500" data-y="-4000" 
+  data-rotate=-45 >
       <a href=http://beauty-of-imagination.blogspot.fr/2012/06/color-of-music-why-not-discover-pythons.html >Spectrosonogramme avec matplotlib</a><br/>
       <img  src=img/sono.png  />
     </div>
-   <div class="step" data-scale=5 data-x="-20000" data-y="-4000" 
-  data-rotate=-90 >
+   <div class="step boxed" data-scale=2 data-x="5500" data-y="-2000" 
+  data-rotate=-30 >
       <a href=http://wwwstat.julbox.fr >Fréquentation de site web</a><br/>
       <br/>
       utilise <a href=https://github.com/jul/yahi>yahi</a> et flask<br/>
-      <img src=img/wwwstat.png  />
+      <img src=img/wwwstat.png width=900px />
     </div>
-   <div class="step" data-scale=4 data-x="-16000" data-y="-6000" 
-  data-rotate=-90 >
+   <div class="step " data-scale=2 data-x="5500" data-y="1000" 
+  data-rotate=0 >
       <a href=http://wwwstat.julbox.fr >Stat de téléchargement sur pypi</a><br/>
       <br/>
       utilise <a href=https://github.com/jul/yahi>archery</a> et flask<br/>
 
-      <img src=img/stat.png width=1200px />
+      <img src=img/stat.png width=900px />
     </div>
 
 </div>
