--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@ Tel: 514 999 7453
 <script src="js/jquery-ui.js"></script>
 <script>
 var class_saver=[];
+$("#impress").hide();
 
 function reveal_impress() { 
     $('#printable').hide();
