new bilingual stuff

--- a/resume.html
+++ b/resume.html
@@ -28,35 +28,32 @@
 </div>
 <div id="impress">
     <div id="init" style="line-height:2" class="step" data-scale=3 data-x="2500" data-y="-500" >
-        Vous préférez :
         <ul>
-            <li><a href="#portfolio">portfolio?</a></li>
-            <li><a  href="#CVinter">CV interactif</a></li>
-            <li><a id=jcprt href="#printable">CV en version imprimable</a></li>
-            <li><a href=resume.html >Version anglaise</li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a  href="#CVinter">interactive CV</a></li>
+            <li><a id=jcprt href="#printable">printable CV</a></li>
+            <li><a href="index.html">French version</a></li>
         </ul>
     </div>
     
    <div id="CVinter" class="content step " 
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
-       <h1 class=big >Objectif</h1>
-       J'apprécie de développer, et de livrer des architectures simples et saines. 
-       Mon objectif de carrière et d'être intégré à une structure opérationnelle, 
-       où la capacité de réalisation est appréciée. 
+       <h1 class=big >Objective</h1>
+        I love to deliver product. I wish to stay close to production lines. QA, development are my 
+        two favourite field of competence. 
    </div>
    <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
-       <h1 class=big >Expériences</h1>
+       <h1 class=big >Experiences</h1>
     </div>
 
        <div  class="content step"   data-scale=1 data-x="000" data-y="2000"  >
-       <h1 class=intitule><b>2011</b> MassMotionMedia Publicité en ligne en format Riche</h1>
+       <h1 class=intitule><b>2011</b> MassMotionMedia Rich Format Media Advertising</h1>
        <p>
-       En tant que développeur senior, j'ai participé à l'élaboration de différents
-       produits basés sur des technologies python :
+       As a python senior I took part in the following projects:
        </p>
        <ul>
-           <li>une solution de Web vidéo multi CDN;</li>
-           <li>un proxy modifiant pour insérer dynamiquement des annonces sur des sites;</li>
+           <li>a multi CDN Web Video Back/front end solution;</li>
+           <li>a proxy for inserting ads on the fly on most of the websites. </li>
        </ul>
 
         <table>
@@ -70,22 +67,22 @@
            </tr>
            <tr >
               <td class=field >
-                Méthodologie
+                Méthodologies
               </td>
               <td class=is >
-                Scruming, dévelopement agile
+                Scruming, agile developement;
               </td>
            </tr>
            <tr >
               <td class=field >
-                Fonctionnel
+                Functional
               </td>
               <td class=is >
-                Assurance Qualité, gestion de projet, développement, documentation
+                Quality Assurance, project management, developement, documentation
               </td>
            <tr >
               <td class=field >
-                Outil et logiciels
+                    Softwares and tools
               </td>
               <td class=is >
                 nginx, mercurial, Chiliproject (aka redmine), postgresql, SqlSoup,
@@ -97,10 +94,7 @@
    <div  class="step  content " data-scale=.9 data-x="1000" data-y="2000"   >
        <h1 class=intitule>2010 Cellfish Media</h1>
        <p>
-       Lead Développeur sur la partie facturation du paiement mobile en ligne 
-       en collaboration avec les TelCo. La
-       mission consitait à développer, suivre les chantiers,
-       encadrer les nouveaux arrivants. 
+       Lead Développeur on a billing solution for mobile payment.
        </p>
        <table >
            <tr >
@@ -113,23 +107,23 @@
            </tr>
            <tr >
               <td class=field >
-                Méthodologie
+                Methodologies
               </td>
               <td class=is >
-                Scruming, dévelopement agile
+                Scruming, agile dévelopement
               </td>
            </tr>
            <tr >
               <td class=field >
-                Fonctionnel
+                Functional
               </td>
               <td class=is >
-                Assurance Qualité, développement, gestion de ticket, suivi de projet, gestion du changement des sources
+                Quality Assurance, project management, developement, documentation, ticketing, source management, unit testing
               </td>
           </tr>
            <tr >
               <td class=field >
-                Outil et logiciels
+                Softwares and tools
               </td>
               <td class=is >
                 Apache, mysql, jira, hudson
@@ -142,10 +136,10 @@
 
    <h1 class=intitule>2005 - 2010 Freelance</h1>
    <p>
-   5 années pour satisfaire ma curiosité pour tous les
-   métiers clients et technologies existantes.<br/>
-   Les TelCo et ainsi que les web agency ont été mes grandes expériences.
-   J'ai surtout travailler en technologie Web.
+    Web agencies, banks and Telco were my main customers. Freelancing requires 
+    a great flexibility in technologies and competences, as a result I mixed up lots of OS
+    (windows, BSD, linux), languages (C#, C, Php, Perl) and function (development, architecture, 
+    system administration, technical writing, and consulting).<br>
    </p>
     <table>
        <tr >
@@ -158,23 +152,15 @@
        </tr>
        <tr >
           <td class=field >
-          Client
+            Functional
           </td>
           <td class=is >
-            Agence webs, banques, Telco, divers,
-          </td>
-       </tr>
-       <tr >
-          <td class=field >
-            Fonctionnel
-          </td>
-          <td class=is >
-            Assurance Qualité, développement, architecture, conseil, avant vente,
-            administration système...
+            Quality Assurance, project management, developement, documentation, ticketing, 
+            consulting, specifications, system administration
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+            Tools and software
           </td>
           <td class=is >
             FreeBSD, Debian, RHEL, svn, cvs, mercurial, matplotlib,
@@ -189,12 +175,11 @@
    data-x="3000"  data-y="2000" >
    <h1 class=intitule>2002 - 2005 Telco</h1>
    <p>
-   Deux grandes expériences: LDCOM networks, et FTC/orange télévision.<br/>
-   Pour LDCOM gestion de la communicaion avec le RIPE pour les allocations d'IPv4, 
-   développement de sondes de mesure en Net::Telnet sur les équipements.<br/>
-   Pour FTC, participation à la mise en place du backbone (DNS, Mail, DHCPd configuration 
-   et documentation de mise en œuvre), ainsi que d'outil d'approvisonnement, et de suivi
-   client (Request Tracker), création d'un patch DHCP leasequery.<br/>
+   I worked for two operators LDCOM, and France Telecom.<br/>
+   LDCOM mission included writing evoluted probes for network equipments and RIPE relations (IPv4 allocation).<br/>
+   I took part in FTC closure thus new backbone creation, and developing tools for handling cable modem
+   IP allocation, I implemented dhcpd leasequery, and had to write technical documentaion on the standard operations.
+   I also particpated in the installation of (Request Tracker).
    </p>
     <table>
        <tr >
@@ -207,14 +192,14 @@
        </tr>
        <tr >
           <td class=field >
-            Fonctionnel
+          Functional
           </td>
           <td class=is >
-            Développement, architecture, conseil, administration système...
+          Development, architecture, technical writing, system administration
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+          Software and tools
           </td>
           <td class=is >
             Debian, RHEL, svn, cvs, kickstart,
@@ -226,12 +211,12 @@
    </div>
    <div  class="step content"  data-scale=.5
    data-x="3500" data-y="2000" >
-   <h1 class=intitule>1999 - 2002 Société de Service en Logiciel Libre </h1>
+   <h1 class=intitule>1999 - 2002 Free Software Engineering  </h1>
    <p>
-   Open care, Easter-eggs, Alcôve ont été mes 3 premières société pour lesquelles j'ai travaillé.<br/>
-   Pionnières dans le domaines, elles ont affronté le réalisme nécessaire à la mise eu œuvre du 
-   libre dans le monde professionnelle.<br/>
-   Plus: le développement d'un driver multi head CL5480 pour linux.
+   Open care, Easter-eggs, Alcôve were my first experiences.<br/>
+   Pioneer in free software business models they taught me at first hand what is free software business model:
+   excellency.<br/>
+   Plus: multi head CL5480 FB driver for linux.
    </p>
 
     <table>
@@ -240,19 +225,19 @@
             Technologies
           </td>
           <td class=is >
-            LAMP, Perl, PHP,  bash, python, web
+            LAMP, Perl, PHP,  bash, C, web
           </td>
        </tr>
        <tr >
           <td class=field >
-            Fonctionnel
+            Functional
           </td>
           <td class=is >
-            Consultant, administration système, développement, gestion de projet, R&amp;D
+            Consultant, Sysadmin, dévelopment, project management, R&amp;D
           </td>
        <tr >
           <td class=field >
-            Outil et logiciels
+          Software and tools
           </td>
           <td class=is >
             Debian, RHEL, Apache, samba, NFS, mysql, postgresql, postfix, NIS, Linux
@@ -262,21 +247,20 @@
    </div>
    <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
   data-rotate=180 >
-       <h1 class=big >Diplômes</h1>
+       <h1 class=big >Diplomas</h1>
     </div>
    <div class="content step" data-scale=1 
    data-rotate=180 data-x="-2000" data-y="1500">
 
    <h1 class=intitule >
-    1998 Maître es science mention assez bien
+    1998 Master in applied science mention assez bien
    </h1>
    Université Pierre et Marie Curie (Paris VI)<br/>
-   Option micro-électronique (CAO des microprocesseurs et programmation 
-   des interfaces)
+   Option: micro-electronique (VLSI design &amp; interface programmation)
    <table>
         <tr >
           <td class=field >
-            Outil
+            Tools
           </td>
           <td class=is >
             VHDL, PSpice, matlab
@@ -297,11 +281,10 @@
    <table>
         <tr >
           <td class=field >
-            Fonctionnel
+          Functional
           </td>
           <td class=is >
-            Assurance Qualité, Conduite Opérationnelle du changement,
-            Analyse des organisations
+          Quality Assurance, Change Management, Organisation Analysis
           </td>
        </tr>
    </table>
@@ -316,15 +299,14 @@
    data-rotate=-90 data-x="-2000" data-y="-2000">
 <ul><li>
     <a  href=http://github.com/jul>Github.com/jul</a> <br/>
-    Contient les sources de mes projets en python et javascript
     </li>
 <li>
-    <a href="http://pypi.python.org/pypi?%3Aaction=search&term=julien+tayon&submit=search">Mes paquets sur pypi</a><br/>
-    Paquets maintenus et packagés sur pypi
+    <a href="http://pypi.python.org/pypi?%3Aaction=search&term=julien+tayon&submit=search">pypi packages</a><br/>
     </li>
     <li>
         <a href=http://beauty-of-imagination.blogspot.fr/ >beauty-of-imagination.blogspot.fr/</a><br/>
-        Blog sur la programmation (référencé sur planet python)
+            blog on technic (ref. by planet python)
+       
     </li>
     </ul>
     </div>
@@ -335,29 +317,29 @@
     </div>
    <div class="step" data-scale=5 data-x="1000" data-y="-6000" 
   data-rotate=-65 >
-      Simulation multi agent avec matplotlib<br/>
-      <a href=https://github.com/jul/KISSMyAgent/wiki >KissMyAgent</a><br/>
-      <img src=img/kiss.jpg  />
+      multi agent simulation  matplotlib<br/>
+      <a href=https://github.com/jul/KISSMyAgent/wiki >KissMyAgent<br/>
+      <img src=img/kiss.jpg  /></a>
     </div>
    <div class="step" data-scale=2 data-x="3500" data-y="-4000" 
   data-rotate=-45 >
-      <a href=http://beauty-of-imagination.blogspot.fr/2012/06/color-of-music-why-not-discover-pythons.html >Spectrosonogramme avec matplotlib</a><br/>
-      <img  src=img/sono.png  />
+      <a href=http://beauty-of-imagination.blogspot.fr/2012/06/color-of-music-why-not-discover-pythons.html >Spectrosonogram with matplotlib<br/>
+      <img  src=img/sono.png  /></a>
     </div>
    <div class="step boxed" data-scale=2 data-x="5500" data-y="-2000" 
   data-rotate=-30 >
-      <a href=http://wwwstat.julbox.fr >Fréquentation de site web</a><br/>
+      <a href=http://wwwstat.julbox.fr >My tool for parsing and plotting web stats<br/>
+      <img src=img/wwwstat.png width=900px /></a>
       <br/>
-      utilise <a href=https://github.com/jul/yahi>yahi</a> et flask<br/>
-      <img src=img/wwwstat.png width=900px />
+      uses <a href=https://github.com/jul/yahi>yahi</a> and flask<br/>
     </div>
    <div class="step " data-scale=2 data-x="5500" data-y="1000" 
   data-rotate=0 >
-      <a href=http://wwwstat.julbox.fr >Stat de téléchargement sur pypi</a><br/>
+      <a href=http://wwwstat.julbox.fr >Download stats on pypi<br/>
+      <img src=img/stat.png width=900px /></a>
       <br/>
-      utilise <a href=https://github.com/jul/yahi>archery</a> et flask<br/>
+      uses <a href=https://github.com/jul/yahi>archery</a> and flask<br/>
 
-      <img src=img/stat.png width=900px />
     </div>
 
 </div>
@@ -368,7 +350,8 @@ version  interactive
 <div >Julien Tayon<br/>
 <a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a href=http://github.com/jul >github.com/jul</a><br/>
-Tel: 514 999 7453
+Tel: 514 999 7453<br/>
+Montréal, CA
 </div>
 </div>
 
